force-app/main/default/objects/HL_General__c/HL_General__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Store General Values that would otherwise be hard-coded
Would eventually like to move the default/profile ids in here too</description>
    <label>HL General</label>
</CustomObject>