force-app/main/default/objects/HL_General__c/fields/Cognos_Domain__c.field-meta.xml
<CustomField>
    <fullName>Cognos_Domain__c</fullName>
    <description>Cognos Domain for the Environment - used in formulas/buttons to point to the correct URI</description>
    <inlineHelpText>Cognos Domain for the Environment</inlineHelpText>
    <label>Cognos Domain</label>
    <length>80</length>
    <type>Text</type>
</CustomField>