force-app/main/default/objects/HL_General__c/fields/Cognos_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Cognos_Protocol__c</fullName>
    <description>Cognos URL Protocol - http:// or https://</description>
    <label>Cognos Protocol</label>
    <length>10</length>
    <type>Text</type>
</CustomField>