force-app/main/default/objects/HL_General__c/fields/Event_Expense_Email_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Event_Expense_Email_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether email notifications may be sent out of the code in the Event Expense application.</description>
    <label>Event Expense Email Notifications</label>
    <type>Checkbox</type>
</CustomField>