force-app/main/default/objects/HL_General__c/fields/Internal_Application_Domain__c.field-meta.xml
<CustomField>
    <fullName>Internal_Application_Domain__c</fullName>
    <description>Internal Application Domain - No HTTP or HTTP(S)</description>
    <label>Internal Application Domain</label>
    <length>80</length>
    <type>Text</type>
</CustomField>