force-app/main/default/objects/HL_General__c/fields/IntranetURLStub__c.field-meta.xml
<CustomField>
    <fullName>IntranetURLStub__c</fullName>
    <defaultValue>&apos;http://slv-hlwebdev/&apos;</defaultValue>
    <description>The stub of the internal intranet URL</description>
    <label>IntranetURLStub</label>
    <length>255</length>
    <type>Text</type>
</CustomField>