force-app/main/default/objects/HL_General__c/fields/Mobile_Search_Result_Default__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Search_Result_Default__c</fullName>
    <defaultValue>200</defaultValue>
    <label>Mobile Search Result Default</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>