force-app/main/default/objects/HL_General__c/fields/Mobile_Search_Result_Limit__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Search_Result_Limit__c</fullName>
    <defaultValue>800</defaultValue>
    <description>Store the Default Mobile Search Results Limit</description>
    <label>Mobile Search Result Limit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>