force-app/main/default/objects/HL_General__c/fields/MSTeamDomain__c.field-meta.xml
<CustomField>
    <fullName>MSTeamDomain__c</fullName>
    <description>Stores the environment-specific host name for the custom app.</description>
    <label>MS Team Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>