force-app/main/default/objects/HL_General__c/fields/Offsite_Archive_Date__c.field-meta.xml
<CustomField>
    <fullName>Offsite_Archive_Date__c</fullName>
    <description>Date used to archive (lock) offsite template records</description>
    <label>Offsite Archive Date</label>
    <type>Date</type>
</CustomField>