force-app/main/default/objects/HL_General__c/fields/Revenue_Accrual_Locked__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Accrual_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Revenue Accrual Locked</description>
    <label>Revenue Accrual Locked</label>
    <type>Checkbox</type>
</CustomField>