force-app/main/default/objects/HL_General__c/fields/Trigger_Time_Record_Period__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Time_Record_Period__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used to toggle/indicate if the Time Record Period triggers should fire</description>
    <label>Trigger Time Record Period</label>
    <type>Checkbox</type>
</CustomField>